--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.7",
+    "@react-navigation/material-top-tabs": "^5.3.13",
     "@react-navigation/native": "^5.9.2",
     "expo": "~40.0.0",
     "expo-linear-gradient": "~8.4.0",
@@ -21,6 +22,7 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
+    "react-native-tab-view": "^2.15.2",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.2.1"
   },
